k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    app.openshift.io/vcs-ref: checkride
    app.openshift.io/vcs-uri: https://github.com/LaurelRing2199/speech-to-text-code-pattern.git
  name: checkride-app
  namespace: yuhan-lin-test
  labels:
    app: checkride-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkride-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: checkride-app
        deploymentconfig: checkride-app
    spec:
      containers:
      - name: checkride-app
        image: docker.io/laurelring/checkride:3ead3e6dc3b9e177ce7f1f930b89c2f42b8334de
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
